--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="nav">
             <div class="logo"></div>
             <div class="navItems">
+                <div class="menu"></div>
                 <a href=""><h3>Home</h3></a>
                 <a href=""><h3>Content</h3></a>
                 <a href=""><h3>About Us</h3></a>
@@ -19,7 +20,7 @@
     </header>
     <section>
         <div class="container">
-            <div class="SlidShow"></div>
+            <div class="SlideShow"></div>
             <div class="topTopics"></div>
         </div>
     </section>
@@ -29,6 +30,5 @@
             <div class="Socials"></div>
         </div>
     </footer>
-    
 </body>
 </html>
