--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Mania</title>
 </head>
 <body>
@@ -20,7 +21,11 @@
     </header>
     <section>
         <div class="container">
-            <div class="SlideShow"></div>
+            <div id="SlideShow">
+                <div class="slide">1</div>
+                <div class="slide">2</div>
+                <div class="slide">3</div>
+            </div>
             <div class="topTopics"></div>
         </div>
     </section>
